# nova3201

./: .gitignore  Cargo.toml  README.md
apps/: app_01.nvb  app_01.s  app_02.nvb  app_02.s  app_03.nvb  app_03.s  app_04.nvb  app_04.s  timer.nvb  timer.s
src/: assembler.rs  boot_logo.rs  bus.rs  cpu.rs  devices.rs  lib.rs  machine.rs  uart.rs
src/cpu/: isa.rs
src/devices/: font.rs  ram.rs  rom.rs  timer.rs  uart.rs  vram.rs
src/devices/uart/: pty_backend.rs
src/docs/: abi.md
verilog/: alu.v  build.sh  cpu_core.v  cpu_core.vcd  cpu_core_tb.v  instr_rom.v  nova3201  regfile.v  test.gtkw
