[package]
name = "nova3201"
description = "An emulator for the nova3201 CPU"
version = "0.1.0"
edition = "2024"
authors = ["Joshua Thijssen <jthijssen@noxlogic.nl>"]

[dependencies]
nix = { version = "0.30.1", features = ["term", "fs"] }

[[bin]]
name = "nova3201"
path = "src/bin/nova3201.rs"

[[bin]]
name = "nvasm"
path = "src/bin/nvasm.rs"

[lib]
name = "nova3201"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]